# STUDYASSISTANT-AI-RESEARChASSISTANT

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: messages.py  query.py  upload.py
backend/db/: mongo.py
backend/graph/: graph.py  nodes.py  router.py  state.py
backend/guardrails/: guardrail_service.py  output_filter.py  validators.py
backend/llm/: groq.py
backend/models/: document.py  message.py  user.py
backend/rag/: embeddings.py  ingest.py  loaders.py  retriever.py  splitter.py  vectorstore.py
backend/services/: agent_service.py  document_service.py  message_service.py  user_service.py
backend/tools/: calculator_tool.py  rag_search.py  tool_registry.py  web_search.py
frontend/: package-lock.json  package.json  proxy.js
frontend/app/: globals.css  layout.js
frontend/app/dashboard/: page.js
frontend/app/sign-in/[[...sign-in]]/: page.js
frontend/app/sign-up/[[...sign-up]]/: page.js
frontend/components/: ChatInput.js  ChatMessage.js  ChatWindow.js  Navbar.js  TypingIndicator.js  UploadButton.js
frontend/hooks/: useChat.js
frontend/lib/: api.js
