[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.7",
    "markdown>=3.10.2",
    "motor>=3.7.1",
    "orjson>=3.11.9",
    "pinecone>=9.1.0",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "torch>=2.12.1",
    "unstructured>=0.23.1",
    "uvicorn>=0.50.0",
]
